--- a/src/app/components/books/books.component.scss
+++ b/src/app/components/books/books.component.scss
@@ -4,93 +4,126 @@
   max-width: 860px;
   margin: auto;
 }
+
 .book-page-title-container {
   @include maxWidth();
   display: flex;
   padding: 15px 25px;
   align-items: center;
+  img {
+    cursor: pointer;
+  }
+  .page-title {
+    font-size: 30px;
+    font-weight: 510;
+    font-family: var(--font-1);
+    margin-left: 10px;
+    text-transform: capitalize;
+    letter-spacing: 1px;
+    color: var(--color-primary);
+    margin-top: -6px;
 }
-.page-title {
-  font-size: 30px;
-  font-weight: 510;
-  font-family: var(--font-1);
-  margin-left: 10px;
-  text-transform: capitalize;
-  letter-spacing: 1px;
-  color: var(--color-primary);
-  margin-top: -6px;
 }
 .searchBox {
   padding: 15px 25px;
   @include maxWidth();
-}
-.searchInputContainer {
-  display: grid;
-  align-items: center;
-  justify-content: center;
-  transition: all 0.1s ease-in;
-  grid-template-columns: 1fr 13fr 1fr;
-  border-radius: 4px;
-  height: 40px;
-  width: 100%;
-  background: var(--color-grey);
-  border: none;
-  padding: 0 10px;
-  box-sizing: border-box;
-  &.border {
-    border: 1px solid var(--color-primary);
-  }
-  > input {
+  .searchInputContainer {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.1s ease-in;
+    grid-template-columns: 1fr 13fr 1fr;
+    border-radius: 4px;
+    height: 40px;
+    width: 100%;
+    background: var(--color-grey);
     border: none;
-    background-color: transparent;
-    outline: none;
-    font-size: 16px;
-    font-family: var(--font-1);
-    font-weight: 510;
-    &::placeholder {
-      color: var(--color-dark-grey);
+    padding: 0 10px;
+    box-sizing: border-box;
+    &.border {
+      border: 1.50px solid var(--color-primary);
+    }
+    > input {
+      border: none;
+      background-color: transparent;
+      outline: none;
+      font-size: 16px;
+      font-family: var(--font-1);
+      font-weight: 510;
+      &::placeholder {
+        color: var(--color-dark-grey);
+      }
+    }
+    .cancel {
+      cursor: pointer;
     }
   }
 }
 .listBackground {
   background-color: var(--color-secondary);
-}
-.book-list-container {
-  padding: 20px 25px;
-  @include maxWidth();
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  .book-container {
-    margin-bottom: 1vw;
+  height: calc(100vh - 126px);
+  .book-list-container {
+    padding: 20px 25px;
+    @include maxWidth();
+    max-height: 560px;
+    overflow-y: auto;
+    min-height: 560px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-auto-rows: 225px;
+    grid-row-gap: 20px;
+    grid-column-gap: 4vw;
+    // justify-items: center;
+    &::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 6px var(--color-grey);
+      border-radius: 10px;
+      background-color: var(--color-grey);
+    }
+  
+    &::-webkit-scrollbar {
+      width: 4px;
+    }
+    &::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      background-color: var(--color-primary);
+      cursor: pointer;
+    }
+    .book-container {
+      margin-bottom: 1vw;
+    }
+    .book-image-container {
+      @include Rectangle();
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+    .book-title {
+      font-family: var(--font-1);
+      font-size: 12px;
+      color: var(--color-black);
+      font-weight: 510;
+      margin-top: 10px;
+      width: 114px;
+      display: -webkit-box;
+      max-width: 200px;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+    }
+    .book-author {
+      font-family: var(--font-1);
+      font-size: 12px;
+      color: var(--color-dark-grey);
+      width: 114px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      margin: 5px 0px 10px;
+      font-weight: 510;
+    }
   }
-  .book-image-container {
-    @include Rectangle();
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-  .book-title {
-    font-family: var(--font-1);
-    font-size: 12px;
-    color: var(--color-black);
-    font-weight: 510;
-    margin-top: 10px;
-    width: 114px;
-    display: -webkit-box;
-    max-width: 200px;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-  }
-  .book-author {
-    font-family: var(--font-1);
-    font-size: 12px;
-    color: var(--color-dark-grey);
-    width: 114px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    margin: 5px 0px 10px;
-    font-weight: 510;
+  .loader{
+    color: var(--color-primary);
+    font-size: 16px;
+    font-weight: 600;
   }
 }
