--- a/src/app/components/error-page/error-page.component.html
+++ b/src/app/components/error-page/error-page.component.html
@@ -1,1 +1,6 @@
-<p>error-page works!</p>
+<div class="error-page">
+    <p>
+        Requested URL is not found.
+        Go to <a routerLink="/home">home page</a>
+    </p>
+</div>
